react-configmap-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-app
        image: react-app:latest
        volumeMounts:
          - name: config-volume
            mountPath: "/etc/config"
          - name: secret-volume
            mountPath: "/etc/secret/"
        ports:
          - containerPort: 3000
        imagePullPolicy: Never
      volumes:
          - name: config-volume
            configMap:
              name: react-config
          - name: secret-volume
            secret:
              secretName: react-secret
