react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react-app
        image: react-app:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Never
