nginx-service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - port: 90
      targetPort: 80
      nodePort: 30007
