react-service-nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: react-service-nodeport
spec:
  type: NodePort
  selector:
    app: react
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008
